# lm-engine

./: .clang-format  .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  7b-p1-mg-lbs-dclm.yaml  7b-p2-mg.yaml  7b.yml  Makefile  README.md  a.py  a.sh  a.txt  b.py  c.py  copyright-exclude.txt  d.py  deltanet-400m-cosine-niah_2026-05-06T05-29-40.636626.json  eval_table.tex  gated-m2rnn_tt-400m-cosine-niah_2026-05-06T05-45-13.681954.json  generate_latex_table.py  generate_long_table.py  generate_retrieval_table.py  hybrid-deltanet-400m-cosine-niah_2026-05-06T05-30-21.574160.json  hybrid-gated-deltanet-gated-m2rnn_tt-1l-400m-cosine-niah_2026-05-06T05-24-49.014871.json  hybrid-gated-m2rnn_tt-400m-cosine-niah_2026-05-06T05-41-37.401275.json  hybrid-m2rnn_tt-400m-cosine-niah_2026-05-06T05-41-02.381308.json  m2rnn_tt-400m-cosine-niah_2026-05-06T05-44-03.277304.json  mayank.txt  missing_inputs.txt  niah-400m.py  niah-7b.py  plot_niah.py  pyproject.toml  simulate.py  test copy.yml  test.yml  tmp.py  triton_attn.py  triton_attn_old.py
.github/: copyright.yaml
.github/workflows/: style.yml  unit-tests.yml
configs/: distillation-example.yml  finetuning-example.yml  softmax-attention-173m.yml  sweep.yml  unshard.yml
configs/msc/: gcs.yml
configs/pretraining-examples/: apple.yml  moe.yml  nvidia-1.yml  nvidia-2.yml  nvidia-3.yml  tpu.yml  trainium.yml
configs/research/: scattermoe.yml  smoe.yml
configs/sweep/: sweep.yml
docker/: Dockerfile  build.sh  data.Dockerfile  tpu.Dockerfile
dolomite_engine/: arguments.py  enums.py
dolomite_engine/hf_models/: __init__.py  parameter.py
dolomite_engine/optimization/: muon.py  muon_v2.py  optimizer.py  params_group.py
examples/diffusion/: diffusion-1b-24l.yml  diffusion.sh  diffusion_eval.py  eval.sh  modify_tokenizer.py  preprocess_data.py
lm_engine/: __init__.py  accelerator.py  arguments.py  communication.py  containers.py  defaults.py  distill.py  distributed.py  dtensors.py  enums.py  finetune.py  fp8.py  generate.py  hf_adapter.py  kernels.py  loss.py  model_config.py  object_storage.py  parallel.py  pretrain.py  register_hf.py  train.py  train_utils.py  unshard.py
lm_engine/accelerator/: __init__.py  accelerator.py  communication.py  random.py
lm_engine/arguments/: __init__.py  base.py
lm_engine/checkpointing/: __init__.py  lr_scheduler.py  model.py  model_optimizer.py  optimizer.py
lm_engine/context_parallel/: __init__.py  load_balancer.py
logs-400m-lm/: results_table.tex
logs-400m-long/: results_table.tex
logs-400m-retrieval/: results_table.tex
logs-7b-lm/: results_table.tex
logs-7b-long/: results_table.tex
logs-7b-retrieval/: results_table.tex
scripts/: wandb_sweep.py
tests/: activations_test.py  argument_override_test.py  blended_megatron_dataset_builder_test.py  configs_test.py  conftest.py  dataloader_test.py  depthwise_causal_convolution_test.py  generation_test.py  gpt_base_test.py  mamba2_op_test.py  mamba2_test.py  megatron_data_test.py  model_conversion_test.py  scattermoe_test.py  test_common.py  utils.py  weight_test.py
tools/: copyright.py  dummy_ray_job.py  export_to_hf.py  import_from_hf.py  inference_example.py  params_calculator.py  pt_to_safetensors.py  tensor_parallel_inference.py  wandb_sweep.py
(+1075 files in other folders)
