# **************************************************
# Copyright (c) 2025, Mayank Mishra
# **************************************************

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lm-engine"
version = "0.1.0"
description = "A library for efficient LLM training."
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Mayank Mishra", email = "mayank31398@gmail.com" },
]
dependencies = [
    "datasets>=4.4.1",
    "gitpython>=3.1.45",
    "ninja>=1.13.0",
    "numpy>=2.3.5",
    "pydantic>=2.12.4",
    "transformers>=4.57.1",
    "wandb>=0.23.0",
]

[project.urls]
Homepage = "https://github.com/open-lm-engine/lm-engine"
Repository = "https://github.com/open-lm-engine/lm-engine"

[project.optional-dependencies]
cpu = [
    "torch>=2.8.0",
]
cuda = [
    "torch>=2.8.0",
]
dev = [
    "parameterized>=0.9.0",
    "pre-commit>=4.4.0",
    "pytest>=9.0.1",
]
flash-attn = [
    "flash-attn>=2.8.3",
]
mamba2 = [
    "mamba-ssm>=2.2.6.post3",
]
tpu = [
    "torch==2.8.0",
    "torch-xla[pallas,tpu]==2.8.0",
]

[tool.isort]
ensure_newline_before_comments = true
force_grid_wrap = 0
include_trailing_comma = true
line_length = 119
lines_after_imports = 2
multi_line_output = 3
use_parentheses = true
